--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+.parent {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.child {
+  background-color: rgb(239 239 239);
+  width: 50%;
+  min-height: 40vh;
+  padding: 5px;
+  border-radius: 5px;
+}
