--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -5,7 +5,7 @@
 <div class="parent">
   <div class="child">
     <div>
-      <h2>Counter State Checking</h2>
+      <h2>User Object store handling.</h2>
       <p>
         Title : {{userData?.title}} <br>
         Body : {{userData?.body}} <br>
