--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 .parent {
   height: 200px;
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
 }
 .child {
